[package]
name = "dolly"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28.7"
wgpu = "0.17.0"
egui = "0.23.0"
egui-winit = "0.23.0"
egui-wgpu = "0.23.0"
bytemuck = { version = "1.8.0", features = ["derive"] }
image = { version = "0.24", features = ["png", "jpeg"] }

tobj = { version = "4.0", features = ["async"] }

anyhow = "1.0"

env_logger = "0.10.0"
log = "0.4.20"
pollster = "0.3.0"
egui_demo_lib = "0.23.0"

cgmath = "0.18"
